# drop-app

./: .env  .gitignore  .gitlab-ci.yml  .gitmodules  DEBUG.md  README.md  app.vue  build.mjs  build.sh  build_appimage.sh  changelog.md  drop-app.desktop  error.vue  gamepad.ts  nuxt.config.ts  nvidia-prop-dev.sh  optimize-appimage.sh  package.json  plugins.ts  tailwind.config.js  tsconfig.json  types.d.ts  types.ts
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: clippy.yml  release.yml  test.yml
appimage/: build_appimage.sh
appimage/drop-oss-app.d/: drop-oss-app.desktop
assets/: main.scss
components/: BigPictureGameDetails.vue  BigPictureGameTile.vue  BigPictureHeader.vue  BigPictureInstallModal.vue  BigPictureIntro.vue  BigPictureNavTile.vue  BigPictureQueueItem.vue  BigPictureSideMenu.vue  BigPictureSidebar.vue  BigPictureToggle.vue  CreateCollectionModal.vue  DeleteCollectionModal.vue  GameCard.vue  GameLibraryControls.vue  GameOptionsModal.vue  GameStatusButton.vue  Header.vue  HeaderButton.vue  HeaderQueueWidget.vue  HeaderUserWidget.vue  HeaderWidget.vue  InitiateAuthModule.vue  LibrarySearch.vue  LoadingButton.vue  MiniHeader.vue  OfflineHeaderWidget.vue  PageWidget.vue  UpdateModal.vue  WindowControl.vue
components/GameOptions/: Launch.vue
composables/: app-state.ts  big-picture.ts  colllection.ts  current-page-engine.ts  downloads.ts  game.ts  queue.ts  state-navigation.ts  use-object.ts  useTheme.ts
layouts/: big-picture.vue  default.vue  mini.vue
libs/drop-base/: README.md  package.json
libs/drop-base/components/: ConfirmationModal.vue  LoadingButton.vue  ModalStack.vue  ModalTemplate.vue  TextInputModal.vue  (+1 more)
main/: app.vue  error.vue  nuxt.config.ts  package.json  tailwind.config.js  types.ts
main/components/: Header.vue  HeaderUserWidget.vue  InitiateAuthModule.vue  LibrarySearch.vue  LoadingIndicator.vue  WindowControl.vue
main/composables/: app-state.ts  game.ts  generateGameMeta.ts  state-navigation.ts
main/pages/: library.vue  queue.vue
main/plugins/: global-error-handler.ts
pages/: account.vue  big-picture.vue  index.vue  library.vue  queue.vue  quit.vue  settings.vue
pages/auth/: code.vue  connecting.vue  failed.vue  index.vue  signedout.vue
pages/big-picture/: index.vue  library.vue  queue.vue  settings.vue  store.vue
pages/error/: index.vue  serverunavailable.vue
pages/settings/: debug.vue  downloads.vue  index.vue  interface.vue
pages/setup/: index.vue  server.vue
pages/store/: index.vue
plugins/: global-error-handler.ts
prisma/: schema.prisma
src/: App.vue
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  autostart.rs  cleanup.rs  commands.rs  data.rs  db.rs  debug.rs  lib.rs  library.rs  main.rs  remote.rs  settings.rs  state.rs  unpacker.rs  utils.rs
src-tauri/src/client/: autostart.rs  cleanup.rs  commands.rs  mod.rs  url_downloader.rs
src-tauri/src/cloud_saves/: backup_manager.rs  conditions.rs  metadata.rs  mod.rs  normalise.rs  path.rs  placeholder.rs  resolver.rs
src-tauri/src/database/: commands.rs  db.rs  debug.rs  mod.rs  models.rs  scan.rs  settings.rs
src-tauri/src/download_manager/: application_download_error.rs  commands.rs  download_logic.rs  download_manager.rs  download_manager_builder.rs  download_manager_frontend.rs  download_thread_control_flag.rs  downloadable.rs  downloadable_metadata.rs  generate_downloadable.rs  internal_error.rs  mod.rs  progress_object.rs  queue.rs  rolling_progress_updates.rs
src-tauri/src/download_manager/util/: download_thread_control_flag.rs  mod.rs  progress_object.rs  queue.rs  rolling_progress_updates.rs
src-tauri/src/downloads/: download_agent.rs  download_commands.rs  download_files.rs  download_logic.rs  download_manager.rs  download_manager_builder.rs  download_manager_interface.rs  download_thread_control_flag.rs  downloads.rs  game_download.rs  manifest.rs  mod.rs  progress.rs  progress_object.rs  queue.rs  stored_manifest.rs
src-tauri/src/error/: application_download_error.rs  backup_error.rs  download_manager_error.rs  drop_server_error.rs  library_error.rs  mod.rs  process_error.rs  remote_access_error.rs  setup_error.rs  user_error.rs
src-tauri/src/games/: commands.rs  library.rs  mod.rs  state.rs
src-tauri/src/games/collections/: collection.rs  commands.rs  mod.rs
src-tauri/src/games/downloads/: commands.rs  download_agent.rs  download_commands.rs  download_logic.rs  drop_data.rs  manifest.rs  mod.rs  stored_manifest.rs  validate.rs
src-tauri/src/p2p/: discovery.rs  registration.rs
src-tauri/src/process/: commands.rs  compat.rs  format.rs  mod.rs  process_command.rs  process_commands.rs  process_handlers.rs  process_manager.rs  utils.rs
src-tauri/src/remote/: auth.rs  cache.rs  commands.rs  fetch_object.rs  mod.rs  remote.rs  requests.rs  server_proto.rs  utils.rs
src-tauri/src/tests/: mod.rs  progress_tests.rs
src-tauri/src/tools/: compatibility_layer.rs  external_component.rs  mod.rs  registry.rs  tool.rs
src-tauri/src/update_checker/: command.rs  mod.rs
src-tauri/tailscale/: Cargo.toml  build.rs
src-tauri/tailscale/src/: bindings.rs  lib.rs  test.rs
src/components/: Greet.vue
view/: nuxt.config.ts  package.json
view/components/: GameStatusButton.vue  Header.vue  HeaderQueueWidget.vue  HeaderUserWidget.vue
view/composables/: game.ts  state-navigation.ts
(+8 files in other folders)
